--- a/CSS intro/Simple styles inheritance/index.html
+++ b/CSS intro/Simple styles inheritance/index.html
@@ -5,7 +5,7 @@
     <title>Класс</title>
     <link
       rel="stylesheet"
-      href="/CSS intro/Simple styles inheritance/main.css"
+      href="/CSS intro/Simple styles inheritance/styles.css"
     />
   </head>
   <body class="main">
