--- a/css_intro/simple_styles_inheritance/index.html
+++ b/css_intro/simple_styles_inheritance/index.html
@@ -5,7 +5,7 @@
     <title>Класс</title>
     <link
       rel="stylesheet"
-      href="/CSS intro/Simple styles inheritance/styles.css"
+      href="/css_intro/simple_styles_inheritance/styles.css"
     />
   </head>
   <body class="main">
