--- a/css_intro/simple_styles_inheritance/index.html
+++ b/css_intro/simple_styles_inheritance/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Класс</title>
-    <link
-      rel="stylesheet"
-      href="/css_intro/simple_styles_inheritance/styles.css"
-    />
+    <style>
+      .main {
+        font-size: 24px;
+      }
+      p {
+        color: green;
+      }
+      li {
+        color: orange;
+      }
+    </style>
   </head>
   <body class="main">
     <main>
