--- a/lesson_selectors_basics_5/combined_selectors_3/index.html
+++ b/lesson_selectors_basics_5/combined_selectors_3/index.html
@@ -14,7 +14,7 @@
         background-color: red;
       }
       .highlighted,
-      company-data {
+      .company-data {
         color: yellow;
       }
       li.user-data {
