--- a/6_selector_advanced/2_hierarchical_selectors_basic/index.html
+++ b/6_selector_advanced/2_hierarchical_selectors_basic/index.html
@@ -22,7 +22,7 @@
         background-color: orange;
         color: white;
       }
-      #special + li {
+      #special + li span {
         border: 3px solid red;
       }
       #special ~ li {
