--- a/6_selector_advanced/4_hierarchical_selectors_2/index.html
+++ b/6_selector_advanced/4_hierarchical_selectors_2/index.html
@@ -11,21 +11,21 @@
     />
     <link rel="stylesheet" type="text/css" href="selectors.css" />
     <style>
-      section.already-learned ol li {
+      section.already-learned ol {
         background-color: green;
         color: white;
       }
-      section.to-be-learned ol li {
+      section.to-be-learned ol {
         background-color: orange;
         color: green;
       }
-      section.to-be-learned code {
+      .to-be-learned code {
         background-color: green;
       }
-      h4 #special1 code {
+      #special1 code {
         border: 2px solid blue;
       }
-      #special2 + li {
+      #special2 ~ li {
         font-size: 24px;
       }
     </style>
