--- a/6_selector_advanced/4_hierarchical_selectors_2/index.html
+++ b/6_selector_advanced/4_hierarchical_selectors_2/index.html
@@ -19,6 +19,9 @@
         background-color: orange;
         color: green;
       }
+      .already-learned code {
+        background-color: orange;
+      }
       .to-be-learned code {
         background-color: green;
       }
