--- a/6_selector_advanced/4_hierarchical_selectors_2/index.html
+++ b/6_selector_advanced/4_hierarchical_selectors_2/index.html
@@ -25,7 +25,7 @@
       .to-be-learned code {
         background-color: green;
       }
-      h4 code {
+      /* что сюда писать? { */
         border: 2px solid blue;
       }
       #special2 ~ li {
