--- a/6_selector_advanced/4_hierarchical_selectors_2/index.html
+++ b/6_selector_advanced/4_hierarchical_selectors_2/index.html
@@ -25,7 +25,7 @@
       .to-be-learned code {
         background-color: green;
       }
-      #special1 code {
+      #special1 + li code {
         border: 2px solid blue;
       }
       #special2 ~ li {
