--- a/7_pseudo-selectors/practice/1_pseudoselectors.html
+++ b/7_pseudo-selectors/practice/1_pseudoselectors.html
@@ -9,6 +9,36 @@
       integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU="
       crossorigin="anonymous"
     />
+    <style>
+      a:active,
+      .some-button:active {
+        border: 3px solid red;
+      }
+      .anchor:link {
+        color: white;
+        background-color: black;
+      }
+      .anchor:visited {
+        background-color: blue;
+        color: whitex;
+      }
+      .anchor:hover {
+        font-size: 24px;
+      }
+      button:disabled {
+        border: 3px dashed gray;
+      }
+      .some-button:hover:enabled {
+        background-color: gray;
+        color: white;
+      }
+      .search:focus {
+        background-color: orange;
+      }
+      .confirm-checkbox:checked {
+        margin-left: 16px;
+      }
+    </style>
   </head>
 
   <body>
