--- a/7_pseudo-selectors/1_pseudoselectors/index.html
+++ b/7_pseudo-selectors/1_pseudoselectors/index.html
@@ -18,7 +18,7 @@
         background-color: orange;
         color: green;
       }
-      .anchor,
+      .anchor:focus,
       button:active {
         border: 3px solid red;
       }
