--- a/7_pseudo-selectors/5_selectors_in_action/index.html
+++ b/7_pseudo-selectors/5_selectors_in_action/index.html
@@ -11,7 +11,7 @@
     />
     <style>
       body {
-        color: #bdc3c7;
+        background-color: #bdc3c7;
       }
       h1 {
         color: #9b59b6;
@@ -40,13 +40,13 @@
       input[type='text'] {
         background-color: gray;
       }
-      div:nth-child(3) > p {
+      div:nth-of-type(3) > p {
         background-color: yellow;
       }
-      div:nth-child(3) > p:last-child {
+      div:nth-of-type(3) > p:last-child {
         border: 5px solid white;
       }
-      div:nth-child(3) em {
+      div:nth-of-type(3) em {
         font-size: 20px;
         color: white;
       }
