--- a/8_box_model_border/practice/1_class_method.html
+++ b/8_box_model_border/practice/1_class_method.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -12,24 +11,24 @@
       crossorigin="anonymous"
     />
     <style>
-      .box {
-        border: solid 8px black;
-        margin: 16px;
-        padding: 16px;
+      .rectangle {
         width: 512px;
         height: 128px;
+        padding: 16px;
+        margin: 16px;
       }
-      .box2 {
-        box-sizing: border-box;
-        background-color: aquamarine;
+      .rectangle1 {
+        background-color: antiquewhite;
       }
-      .box3 {
+      .rectangle2 {
         background-color: azure;
+        box-sizing: border-box;
       }
     </style>
+    <title>Document</title>
   </head>
   <body>
-    <div class="box">Content Box Sizing</div>
-    <div class="box2">Border Box Sizing</div>
+    <div class="rectangle1 rectangle">I am rectangle</div>
+    <div class="rectangle2 rectangle">I am rectangle</div>
   </body>
 </html>
