--- a/8_box_model_border/practice/4_margines.html
+++ b/8_box_model_border/practice/4_margines.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -12,24 +11,28 @@
       crossorigin="anonymous"
     />
     <style>
-      .box {
-        border: solid 8px black;
-        margin: 16px;
-        padding: 16px;
-        width: 512px;
-        height: 128px;
-      }
-      .box2 {
+      * {
         box-sizing: border-box;
-        background-color: aquamarine;
       }
-      .box3 {
-        background-color: azure;
+      .rectangle {
+        width: 100px;
+        height: 100px;
+        background-color: aqua;
+        margin: 20px;
+      }
+      span {
+        margin: 20px;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
       }
     </style>
+    <title>Document</title>
   </head>
   <body>
-    <div class="box">Content Box Sizing</div>
-    <div class="box2">Border Box Sizing</div>
+    <div class="rectangle"></div>
+    <div class="rectangle"></div>
+    <span>1</span>
+    <span>2</span>
   </body>
 </html>
