--- a/8_box_model_border/1_box_model/index.html
+++ b/8_box_model_border/1_box_model/index.html
@@ -13,23 +13,23 @@
     />
     <style>
       .box {
-        border: solid 8px black;
-        margin: 16px;
-        padding: 16px;
         width: 512px;
         height: 128px;
+        border: 8px solid black;
+        margin: 16px;
+        padding: 16px;
+      }
+      .box1 {
+        background-color: aquamarine;
       }
       .box2 {
         box-sizing: border-box;
-        background-color: aquamarine;
-      }
-      .box3 {
         background-color: azure;
       }
     </style>
   </head>
   <body>
-    <div class="box">Content Box Sizing</div>
-    <div class="box2">Border Box Sizing</div>
+    <div class="box1 box">Content Box Sizing</div>
+    <div class="box2 box">Border Box Sizing</div>
   </body>
 </html>
