--- a/8_box_model_border/1_box_model/index.html
+++ b/8_box_model_border/1_box_model/index.html
@@ -12,6 +12,9 @@
       crossorigin="anonymous"
     />
     <style>
+      body {
+        background-color: antiquewhite;
+      }
       .box {
         width: 512px;
         height: 128px;
