--- a/8_box_model_border/1_box_model/index.html
+++ b/8_box_model_border/1_box_model/index.html
@@ -12,27 +12,21 @@
       crossorigin="anonymous"
     />
     <style>
-      body {
-        background-color: antiquewhite;
-      }
       .box {
-        width: 512px;
-        height: 128px;
-        border: 8px solid black;
-        margin: 16px;
-        padding: 16px;
-      }
-      .box1 {
-        background-color: aquamarine;
-      }
-      .box2 {
+        width: 500px;
+        height: 200px;
+        padding: 20px;
+        margin: 50px 100px;
+        background-color: bisque;
         box-sizing: border-box;
-        background-color: azure;
+        border-width: 10px 20px;
+        border-style: solid solid dashed dashed;
+        border-color: firebrick chartreuse burlywood aqua;
+        font-size: 24px;
       }
     </style>
   </head>
   <body>
-    <div class="box1 box">Content Box Sizing</div>
-    <div class="box2 box">Border Box Sizing</div>
+    <div class="box">I am colorful rectangle</div>
   </body>
 </html>
