--- a/8_box_model_border/1_box_model/index.html
+++ b/8_box_model_border/1_box_model/index.html
@@ -13,20 +13,23 @@
     />
     <style>
       .box {
-        width: 500px;
-        height: 200px;
-        padding: 20px;
-        margin: 50px 100px;
-        background-color: bisque;
+        border: solid 8px black;
+        margin: 16px;
+        padding: 16px;
+        width: 512px;
+        height: 128px;
+      }
+      .box1 {
         box-sizing: border-box;
-        border-width: 10px 20px;
-        border-style: solid solid dashed dashed;
-        border-color: firebrick chartreuse burlywood aqua;
-        font-size: 24px;
+        background-color: aquamarine;
+      }
+      .box2 {
+        background-color: azure;
       }
     </style>
   </head>
   <body>
-    <div class="box">I am colorful rectangle</div>
+    <div class="box box1">Content Box Sizing</div>
+    <div class="box box2">Border Box Sizing</div>
   </body>
 </html>
