--- a/8_box_model_border/2_grouping/index.html
+++ b/8_box_model_border/2_grouping/index.html
@@ -13,23 +13,20 @@
     />
     <style>
       .box {
-        border: solid 8px black;
-        margin: 16px;
-        padding: 16px;
-        width: 512px;
-        height: 128px;
-      }
-      .box1 {
+        width: 500px;
+        height: 200px;
+        padding: 20px;
+        margin: 50px 100px;
+        background-color: bisque;
         box-sizing: border-box;
-        background-color: aquamarine;
-      }
-      .box2 {
-        background-color: azure;
+        border-width: 10px 20px;
+        border-style: solid solid dashed dashed;
+        border-color: firebrick chartreuse burlywood aqua;
+        font-size: 24px;
       }
     </style>
   </head>
   <body>
-    <div class="box box1">Content Box Sizing</div>
-    <div class="box box2">Border Box Sizing</div>
+    <div class="box">I am colorful rectangle</div>
   </body>
 </html>
