--- a/8_box_model_border/3_padding_elementary/index.html
+++ b/8_box_model_border/3_padding_elementary/index.html
@@ -15,6 +15,7 @@
       div {
         border: 3px solid black;
         padding: 50px;
+        background-color: aqua;
       }
     </style>
   </head>
