--- a/8_box_model_border/4_elementary_pad_mar/index.html
+++ b/8_box_model_border/4_elementary_pad_mar/index.html
@@ -16,6 +16,7 @@
         border: 3px solid black;
         padding: 50px;
         background-color: aqua;
+        margin: 50px;
       }
     </style>
   </head>
@@ -27,4 +28,3 @@
     <div>I am learning box model in CSS!</div>
   </body>
 </html>
- 
