--- a/8_box_model_border/6_geo/index.html
+++ b/8_box_model_border/6_geo/index.html
@@ -40,7 +40,7 @@
         width: 100px;
         height: 100px;
         border: 50px solid transparent;
-        border-top-color: red;
+        border-top-color: brown;
       }
     </style>
   </head>
