--- a/8_box_model_border/6_first_project/index.html
+++ b/8_box_model_border/6_first_project/index.html
@@ -12,20 +12,39 @@
       crossorigin="anonymous"
     />
     <style>
-      .angle {
+      * {
         box-sizing: border-box;
-        height: 100px;
-        width: 1000px;
       }
       .blue {
-      }
-      .green {
+        margin: 50px;
+        padding: 50px;
+        background-color: blue;
+        border: 2px solid black;
       }
       .yellow {
+        padding: 50px;
+        background-color: yellow;
+        border: 2px solid black;
+      }
+      .green {
+        padding: 50px;
+        background-color: green;
+        border: 2px solid black;
+      }
+      .pink {
+        padding: 50px;
+        background-color: pink;
+        border: 2px solid black;
       }
     </style>
   </head>
   <body>
-    <div class="angle"></div>
+    <div class="blue">
+      <div class="yellow">
+        <div class="green">
+          <div class="pink"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
