--- a/10_flexbox/practice/index.html
+++ b/10_flexbox/practice/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU="
+      crossorigin="anonymous"
+    />
+    <style>
+      .horizontal {
+        display: flex;
+        margin: 16px;
+        border: 1px solid brown;
+        height: 100px;
+        align-items: center;
+        justify-content: center;
+      }
+      .vertical {
+        display: flex;
+        flex-direction: column;
+        margin: 16px;
+        border: 1px solid brown;
+        height: 200px;
+        align-items: center;
+        justify-content: space-around;
+      }
+    </style>
     <title>10_practice</title>
   </head>
   <body>
-    <h1>Hello!</h1>
+    <div class="horizontal">
+      <div>Span 1</div>
+      <div>Span 2</div>
+      <div>Span 3</div>
+    </div>
+    <div class="vertical">
+      <div>Span 1</div>
+      <div>Span 2</div>
+      <div>Span 3</div>
+    </div>
   </body>
 </html>
