--- a/11_visibility/4_tooltip/index.html
+++ b/11_visibility/4_tooltip/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Gallery</title>
+    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -13,62 +13,9 @@
   </head>
 
   <body>
-    <div class="gallery">
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
-      <img
-        class="thumb"
-        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson11/hw2/small.jpg"
-        alt="nature"
-      />
+    <div class="text">
+      Hover over me
+      <span class="tooltip">I'm a tooltip</span>
     </div>
   </body>
 </html>
