--- a/12_styling/3_lists/index.html
+++ b/12_styling/3_lists/index.html
@@ -1,36 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Стилизуем списки</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-      integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
-
   <body>
-    <header>
-      <h1>Стилизуем списки</h1>
-    </header>
-    <main class="container">
-      <p>
-        Относительные единицы измерения (em и rem) зависят от некоторых
-        параметров родительских элементов. Абсолютные величины (px) будут
-        отображаться одиннаково повсюду.
-      </p>
-      <ul class="list">
-        <li class="first">Overline</li>
-        <li class="second">Line-through</li>
-        <li class="third">Underline</li>
-      </ul>
-    </main>
+    <pre>&lt;!DOCTYPE html&gt;<br/>&lt;html lang=&quot;en&quot;&gt;<br/>&lt;head&gt;<br/>  &lt;meta charset=&quot;UTF-8&quot;&gt;<br/>  &lt;meta http-equiv=&quot;X-UA-Compatible&quot; content=&quot;IE=edge&quot;&gt;<br/>  &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;<br/>  &lt;title&gt;Document&lt;/title&gt;<br/>&lt;/head&gt;<br/>&lt;body&gt;<br/>  <br/>&lt;/body&gt;<br/>&lt;/html&gt;</pre>
   </body>
 </html>
