--- a/14_сascade/1_nasl/index.html
+++ b/14_сascade/1_nasl/index.html
@@ -5,7 +5,7 @@
     <title>Наследование в CSS</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+      href="https://cdnjs.14_сascade_and_inheritancecloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
       integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
       crossorigin="anonymous"
     />
