--- a/15_multimedia/1_img_tag/index.html
+++ b/15_multimedia/1_img_tag/index.html
@@ -16,40 +16,41 @@
   <body>
     <div class="image-container">
       <img
+        class="main-image"
         src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg"
-        alt=""
+        alt="sometext"
       />
-      <div class="gallery">
-        <div class="card">
-          <figure>
-            <img
-              class="opacity-filter"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg"
-              alt=""
-            />
-            <figcaption class="caption">opacity</figcaption>
-          </figure>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="blur-filter"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg"
-              alt=""
-            />
-            <figcaption class="caption">blur</figcaption>
-          </figure>
-        </div>
-        <div class="card">
-          <figure>
-            <img
-              class="invert-filter"
-              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg"
-              alt=""
-            />
-            <figcaption class="caption">invert</figcaption>
-          </figure>
-        </div>
+    </div>
+    <div class="gallery">
+      <div class="card">
+        <figure>
+          <img
+            class="opacity-filter"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg"
+            alt="sometext"
+          />
+          <figcaption class="caption">opacity</figcaption>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <img
+            class="blur-filter"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg"
+            alt="sometext"
+          />
+          <figcaption class="caption">blur</figcaption>
+        </figure>
+      </div>
+      <div class="card">
+        <figure>
+          <img
+            class="invert-filter"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg"
+            alt="sometext"
+          />
+          <figcaption class="caption">invert</figcaption>
+        </figure>
       </div>
     </div>
   </body>
