--- a/15_multimedia/practice/1_practice/index.html
+++ b/15_multimedia/practice/1_practice/index.html
@@ -29,7 +29,7 @@
           src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg"
           alt="Opacity filter"
         />
-        <figcaption class="caption">Opacity</figcaption>
+        <figcaption class="caption">opacity</figcaption>
       </figure>
       <figure class="card">
         <img
