--- a/15_multimedia/practice/1_practice/index.html
+++ b/15_multimedia/practice/1_practice/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <div class="image-container">
       <img
         class="main-image"
         src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg"
