--- a/16_forms/practice/2/index.html
+++ b/16_forms/practice/2/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <label for="custom-checkbox">Custom</label>
+    <label class="checkbox">
+      Checkbox
       <input id="custom-checkbox" type="checkbox" name="agree" />
-    </div>
+      <span class="checkmark" for="custom-checkbox"></span>
+    </label>
   </body>
 </html>
