--- a/16_forms/1_/index.html
+++ b/16_forms/1_/index.html
@@ -14,37 +14,41 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <input type="text" name="lastName" value="Emmerson" />
-    </div>
-    <div>
-      <input type="number" name="age" value="17" />
-    </div>
-    <div>
-      <input type="checkbox" id="someCheckBox" name="age" />
-      <label for="someCheckBox">Accept terms and conditions</label>
-    </div>
-    <div class="choose-gender">
-      <label for="male">
-        <input type="radio" name="choose-gender" id="male" />
-        Male
-      </label>
+    <form>
+      <div class="some-div">
+        <input type="text" name="lastName" value="Emerson" />
+      </div>
+      <div class="some-div">
+        <input type="number" name="age" value="17" />
+      </div>
+      <div class="some-div">
+        <input type="checkbox" id="someCheckBox" name="age" />
+        <label for="someCheckBox">Accept terms and conditions</label>
+      </div>
 
-      <label for="female">
-        <input type="radio" name="choose-gender" id="female" />
-        Female
-      </label>
-      <label for="secret">
-        <input type="radio" name="choose-gender" id="secret" />
-        Secret
-      </label>
-    </div>
-    <div>
-      <textarea
-        name="description"
-        placeholder="Write description..."
-      ></textarea>
-    </div>
-    <div><button type="submit">Submit</button></div>
+      <div class="choose-gender">
+        <label for="male">
+          <input type="radio" name="choose-gender" id="male" />
+          Male
+        </label>
+        <label for="female">
+          <input type="radio" name="choose-gender" id="female" />
+          Female
+        </label>
+        <label for="secret">
+          <input type="radio" name="choose-gender" id="secret" />
+          Secret
+        </label>
+      </div>
+      <div class="some-div">
+        <textarea
+          name="description"
+          placeholder="Write description..."
+        ></textarea>
+      </div>
+      <div class="some-div">
+        <button type="submit">Submit</button>
+      </div>
+    </form>
   </body>
 </html>
