--- a/16_forms/1_/index.html
+++ b/16_forms/1_/index.html
@@ -22,7 +22,7 @@
         <input type="number" name="age" value="17" />
       </div>
       <div class="some-div">
-        <input type="checkbox" id="someCheckBox" name="age" />
+        <input type="checkbox" id="someCheckBox" name="agree" />
         <label for="someCheckBox">Accept terms and conditions</label>
       </div>
 
