--- a/16_forms/1_/index.html
+++ b/16_forms/1_/index.html
@@ -27,7 +27,14 @@
       </div>
 
       <div class="choose-gender">
-        <label for="male">
+        <input type="radio" id="gender-male" name="gender" />
+        <label for="gender-male">Male</label>
+        <input type="radio" id="gender-female" name="gender" />
+        <label for="gender-female">Female</label>
+        <input type="radio" id="gender-secret" name="gender" />
+        <label for="gender-secret">Secret</label>
+      </div>
+      <!-- <label for="male">
           <input type="radio" name="choose-gender" id="male" />
           Male
         </label>
@@ -39,7 +46,7 @@
           <input type="radio" name="choose-gender" id="secret" />
           Secret
         </label>
-      </div>
+      </div> -->
       <div class="some-div">
         <textarea
           name="description"
