--- a/16_forms/3_/index.html
+++ b/16_forms/3_/index.html
@@ -9,13 +9,13 @@
       integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
       crossorigin="anonymous"
     />
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <label class="checkbox"
       >Checkbox
-      <input type="checkbox" />
+      <input type="checkbox"  />
       <span class="checkmark"></span>
     </label>
   </body>
