--- a/16_forms/5_big-form/index copy.html
+++ b/16_forms/5_big-form/index copy.html
@@ -16,7 +16,7 @@
   <body>
     <form>
       <input type="text" name="primaryLanguage" value="HTML" disabled />
-      <input type="checkbox" name="agree" />
+      <input type="checkbox" name="agree" unchecked />
       <input type="checkbox" name="like" readonly checked />
       <input type="color" name="favouriteColor" value="#ff7f50" />
       <input type="date" name="birthDate" value="2021-01-02" />
@@ -32,29 +32,30 @@
       <input type="number" name="favouriteNumber" value="17" />
       <textarea
         name="story"
-        placeholder="A long time ago..."
-        cols="30"
         rows="5"
+        cols="30"
+        placeholder="A long time ago..."
       ></textarea>
       <input type="password" value="secret" />
+      <div class="languages">
+        <label for="language">
+          <input type="radio" name="language" value="html" />HTML
+        </label>
 
-      <!-- <div class="languages">
-        <input type="radio" name="language" value="html" />
-        <input type="radio" name="language" value="css" />
-        <label>
-          <input
-            type="radio"
-            name="language"
-            id="language"
-            value="javascript"
-          />
-          JavaScript
-        </label> -->
-      <!-- </div> -->
-      <input type="range" name="learningProgress" value="30" />
-      <select name="someName" id="pet-select">
+        <label for="language">
+          <input type="radio" name="language" value="css" checked />CSS
+        </label>
+
+        <label for="language">
+          <input type="radio" name="language" value="javascript" />JavaScript
+        </label>
+
+        <input type="range" name="learningProgress" value="30" />
+      </div>
+
+      <select name="framework" id="">
         <option value="react">React</option>
-        <option selected value="jquery">jQuery</option>
+        <option value="jquery" selected>Jquery</option>
         <option value="bootstrap">Bootstrap</option>
       </select>
       <input type="search" name="search" placeholder="Type first letters..." />
