--- a/16_forms/5_big-form/index.html
+++ b/16_forms/5_big-form/index.html
@@ -36,7 +36,7 @@
         cols="30"
         placeholder="A long time ago..."
       ></textarea>
-      <input type="password" name="password" value="secret" />
+      <input type="password" value="secret" />
       <div class="languages">
         <label for="language">
           <input type="radio" name="language" value="html" />HTML
@@ -49,9 +49,9 @@
         <label for="language">
           <input type="radio" name="language" value="javascript" />JavaScript
         </label>
-      </div>
 
-      <input type="range" name="learningProgress" value="30" />
+        <input type="range" name="learningProgress" value="30" />
+      </div>
 
       <select name="framework" id="">
         <option value="react">React</option>
