--- a/16_forms/5_big-form/index.html
+++ b/16_forms/5_big-form/index.html
@@ -36,7 +36,7 @@
         cols="30"
         placeholder="A long time ago..."
       ></textarea>
-      <input type="password" value="secret" />
+      <input type="password" name="password" value="secret" />
       <div class="languages">
         <label for="language">
           <input type="radio" name="language" value="html" />HTML
