--- a/16_forms/5_big-form/index.html
+++ b/16_forms/5_big-form/index.html
@@ -58,7 +58,7 @@
         ></textarea>
       </div>
       <div>
-        <input type="password" value="secret" />
+        <input type="password" name="password" value="secret" />
       </div>
       <div class="languages">
         <input type="radio" name="language" value="html" />
@@ -74,7 +74,7 @@
       <div>
         <select name="framework" id="">
           <option value="react">React</option>
-          <option value="jquery" selected>Jquery</option>
+          <option value="jquery" selected>jQuery</option>
           <option value="bootstrap">Bootstrap</option>
         </select>
       </div>
