--- a/18_icons_svg/2_use_like_icon_1/index.html
+++ b/18_icons_svg/2_use_like_icon_1/index.html
@@ -56,7 +56,7 @@
       Catch the bird
     </button>
     <button class="custom_button">
-      <i class="fas fa-solid fa-id-card"></i>
+      <i class="fas" class="fa-solid fa-id-card"></i>
       Create account
     </button>
   </body>
