--- a/18_icons_svg/3_use_like_icon_2/index.html
+++ b/18_icons_svg/3_use_like_icon_2/index.html
@@ -20,19 +20,19 @@
   <body>
     <div class="main">
       <div class="div_16">
-        <i class="fa fa-battery-full"></i>
+        <i class="fa fa-battery-full" aria-hidden="true"></i>
       </div>
       <div class="div_32">
-        <i class="fa fa-battery-three-quarters"></i>
+        <i class="fa fa-battery-three-quarters" aria-hidden="true"></i>
       </div>
       <div class="div_64">
-        <i class="fa fa-battery-half"></i>
+        <i class="fa fa-battery-half" aria-hidden="true"></i>
       </div>
       <div class="div_128">
-        <i class="fa fa-battery-quarter"></i>
+        <i class="fa fa-battery-quarter" aria-hidden="true"></i>
       </div>
       <div class="div_256">
-        <i class="fa fa-battery-empty"></i>
+        <i class="fa fa-battery-empty" aria-hidden="true"></i>
       </div>
     </div>
   </body>
