--- a/19_animation/3_loading/index.html
+++ b/19_animation/3_loading/index.html
@@ -13,23 +13,20 @@
     <style>
       @keyframes moving {
         from {
-          left: 0;
+          left: 46%;
           opacity: 1;
         }
         to {
-          left: 70px;
+          left: 53%;
         }
       }
 
       @keyframes blinking {
-        0% {
+        from {
           opacity: 0;
         }
-        50% {
+        to {
           opacity: 1;
-        }
-        100% {
-          opacity: 0;
         }
       }
     </style>
