--- a/20_transormations/2_anim_with_delay/index.html
+++ b/20_transormations/2_anim_with_delay/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Animation</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
       integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
-    <div class="square"></div>
-    <span class="text">I am a text under the square</span>
+    <button class="fancy-button">Fancy button</button>
   </body>
 </html>
