--- a/20_transormations/2_anim_with_delay/index.html
+++ b/20_transormations/2_anim_with_delay/index.html
@@ -9,9 +9,14 @@
       integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <button class="fancy-button">Fancy button</button>
+    <div class="container">
+      <button class="fancy-button">
+        <span class="text">Fancy button</span>
+      </button>
+    </div>
   </body>
 </html>
