--- a/20_transormations/1_2d_transformations/index.html
+++ b/20_transormations/1_2d_transformations/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="square"></div>
-    <span class="text">I am a text under the square</span>
+    <div class="container">
+      <div class="square"></div>
+      <span class="text">I am a text under the square</span>
+    </div>
   </body>
 </html>
