--- a/22_adaptive_layout/2_using_breakpoints/index.html
+++ b/22_adaptive_layout/2_using_breakpoints/index.html
@@ -16,10 +16,10 @@
   <body>
     <div class="wrapper">
       <section class="products">
-        <div class="nav"><span>Navigation</span></div>
+        <div class="navigation"><span>Navigation</span></div>
         <div class="products-list"><span>Products List</span></div>
       </section>
+      <div class="news"><span>News</span></div>
     </div>
-    <div class="news"><span>News</span></div>
   </body>
 </html>
