--- a/22_adaptive_layout/2_using_breakpoints/index.html
+++ b/22_adaptive_layout/2_using_breakpoints/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="content">
       <section class="products">
         <div class="navigation"><span>Navigation</span></div>
         <div class="products-list"><span>Products List</span></div>
