--- a/23_preprocessors/practice/index.html
+++ b/23_preprocessors/practice/index.html
@@ -10,7 +10,10 @@
       integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="/23_preprocessors/practice/styles/styles.css"
+    />
   </head>
   <body>
     <header class="header">
