--- a/24_foundation_layout/index.html
+++ b/24_foundation_layout/index.html
@@ -17,25 +17,146 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="footer.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="headline.css" />
+    <link rel="stylesheet" href="common.css" />
     <title>Document</title>
   </head>
   <body>
+    <!-- Header -->
+
     <div class="page">
-      <header class="header">
-        <img class="logo" src="./img/Icon.png" alt="Logo" />
-        <span class="logo__name">Foundation</span>
-        <span class="logo__description">Startup landing template</span>
-        <nav class="navigation">
-          <ul class="nav-list">
-            <li class="nav-list__item nav-list__item_selected">Home</li>
-            <li class="nav-list__item">Stories</li>
-            <li class="nav-list__item">Library</li>
-          </ul>
-        </nav>
-        <button class="header__button">Get Started</button>
-      </header>
-      <section></section>
+      <div class="top-section">
+        <header class="header">
+          <div class="logo">
+            <img class="logo__image" src="./img/Icon.png" alt="Logo" />
+            <div class="logo__text">
+              <div class="logo__name">Foundation</div>
+              <div class="logo__description">Startup landing template</div>
+            </div>
+          </div>
+
+          <nav class="navigation">
+            <a href="#" class="navigation__item navigation__item_selected"
+              >Home</a
+            >
+            <a href="#" class="navigation__item">Stories</a>
+            <a href="#" class="navigation__item"
+              >Library<i class="navigation__arrow"></i
+            ></a>
+          </nav>
+          <button class="action__button">Get Started</button>
+        </header>
+
+        <!-- Headline -->
+
+        <section class="headline">
+          <div class="headline__content">
+            <h1 class="headline__title">Build stunning websites & apps.</h1>
+            <p class="headline__description">
+              Create live segments and target the right people for messages
+              based on their behaviors.
+            </p>
+
+            <div class="headline__actions">
+              <button class="action__button">Get Started</button>
+              <button class="headline__learn-more-btn">Learn More</button>
+            </div>
+          </div>
+          <img
+            class="headline__banner"
+            src="./img/ouch.png"
+            alt="Headline Banner"
+          />
+        </section>
+      </div>
+
+      <!-- Footer -->
+
+      <footer class="footer">
+        <div class="footer-navigation">
+          <div class="about-company">
+            <div class="logo">
+              <img class="logo__image" src="./img/Icon-dark.png" alt="Logo" />
+              <div class="logo__text">
+                <div class="logo__name">Foundation</div>
+                <div class="logo__description">Startup landing template</div>
+              </div>
+            </div>
+            <p class="footer__description">
+              Foundation is a website template for startups and small teams. It
+              helps to build a website in no time.
+            </p>
+            <div class="downloads">
+              <img
+                class="downloads__item"
+                src="./img/appstore.png"
+                alt="Apple Store Download"
+              />
+              <img
+                class="downloads__item"
+                src="./img/googleplay.png"
+                alt="Google Store Download"
+              />
+            </div>
+          </div>
+
+          <div class="additional-navigation">
+            <div class="additional-navigation__column nav-links">
+              <h3 class="nav-links__title">Products</h3>
+              <ul class="nav-links__list">
+                <li class="nav-links__title__list-item">Acquire Users</li>
+                <li class="nav-links__title__list-item">Content Marketing</li>
+                <li class="nav-links__title__list-item">Website Templates</li>
+                <li class="nav-links__title__list-item">Customer Management</li>
+                <li class="nav-links__title__list-item">Virtual Inbox</li>
+              </ul>
+            </div>
+            <div class="nav-links">
+              <h3 class="nav-links__title">Company</h3>
+              <ul class="nav-links__list">
+                <li class="nav-links__title__list-item">About Foundation</li>
+                <li class="nav-links__title__list-item">Brand Guidelines</li>
+                <li class="nav-links__title__list-item">Press Kit</li>
+                <li class="nav-links__title__list-item">Support</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!--  -->
+
+        <div class="footer__line"></div>
+        <div class="footer-links">
+          <nav class="terms">
+            <a href="#" class="terms__items">Terms</a>
+            <a href="#" class="terms__items">Privacy</a>
+            <a href="#" class="terms__items">License</a>
+          </nav>
+          <div class="social-links">
+            <a
+              class="social-links__item"
+              href="https://twitter.com"
+              target="_blank"
+              ><img src="./img/social_twitter.png" alt="Twitter Link"
+            /></a>
+            <a
+              class="social-links__item"
+              href="https://facebook.com"
+              target="_blank"
+              ><img src="./img/social_facebook.png" alt="Facebook Link"
+            /></a>
+            <a
+              class="social-links__item"
+              href="https://www.linkedin.com/"
+              target="_blank"
+              ><img src="./img/social_linkedin.png" alt="Twitter Link"
+            /></a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
