--- a/24_foundation_layout/index.html
+++ b/24_foundation_layout/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="headline.css" />
     <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="customers.css" />
     <title>Document</title>
   </head>
   <body>
@@ -72,6 +74,60 @@
           />
         </section>
       </div>
+
+      <!-- About -->
+
+      <section class="about">
+        <article class="article">
+          <h4 class="article__title">What is it about?</h4>
+          <p class="article__text">
+            Building a website for a startup that looks amazing is not a rocket
+            science anymore.
+          </p>
+        </article>
+        <article class="article">
+          <h4 class="article__title">Who is it for??</h4>
+          <p class="article__text">
+            Startups, small companies and teams, entrepreneurs and web
+            developers.
+          </p>
+        </article>
+      </section>
+
+      <!-- Customers -->
+
+      <section class="customers">
+        <img
+          class="customers__logo"
+          src="./img/logos/new_york_times_logo.png"
+          alt="New York Times Logo"
+        />
+        <img
+          class="customers__logo"
+          src="./img/logos/forbes_logo.png"
+          alt="Forbes Logo"
+        />
+        <img
+          class="customers__logo"
+          src="./img/logos/apple_logo.png"
+          alt="Apple Logo"
+        />
+        <img
+          class="customers__logo"
+          src="./img/logos/mashable_logo.png"
+          alt="Mashable Logo"
+        />
+        <img
+          class="customers__logo"
+          src="./img/logos/wsj_logo.png"
+          alt="WSJ logo"
+        />
+        <img
+          class="customers__logo"
+          src="./img/logos/google_logo.png"
+          alt="Google Logo"
+        />
+      </section>
 
       <!-- Footer -->
 
