--- a/24_foundation_layout/index.html
+++ b/24_foundation_layout/index.html
@@ -129,6 +129,35 @@
         />
       </section>
 
+      <!-- Features -->
+
+      <section class="features">
+        <div class="">
+          <h4 class="features__subtitle">Features</h4>
+          <h2 class="features__title">Easily find leads and customers</h2>
+          <p class="features__description">
+            Send one-off and automated email, push, and in-app messages to
+            people. Create better stories.
+          </p>
+          <div class="">
+            <img src="./img/features/compass_icon.png" alt="Compas" />
+            <h5 class="features__">Acquire new customers</h5>
+          </div>
+          <p class="features__advantage">
+            Everything you need to start building – including open-source code,
+            documentation.
+          </p>
+          <div>
+            <img src="img/features/goverment_icon.png" alt="Goverment" />
+            <span class="features__text">Engage users</span>
+          </div>
+          <div>
+            <img src="img/features/bucket_icon.png" alt="Goverment" />
+            <span class="features__text">Develop across platforms</span>
+          </div>
+        </div>
+      </section>
+
       <!-- Footer -->
 
       <footer class="footer">
