--- a/24_foundation_layout/index.html
+++ b/24_foundation_layout/index.html
@@ -50,7 +50,12 @@
               >Library<i class="navigation__arrow"></i
             ></a>
           </nav>
-          <button class="action__button">Get Started</button>
+          <button class="action__button header__button">Get Started</button>
+          <button class="header__menu-button">
+            <span class="header__menu-icon">
+              <img src="./img/mobile/burger_logo.png" alt="" />
+            </span>
+          </button>
         </header>
 
         <!-- Headline -->
@@ -64,8 +69,12 @@
             </p>
 
             <div class="headline__actions">
-              <button class="action__button">Get Started</button>
-              <button class="headline__learn-more-btn">Learn More</button>
+              <button class="action__button headline__action-btn">
+                Get Started
+              </button>
+              <button class="headline__learn-more-btn headline__action-btn">
+                Learn More
+              </button>
             </div>
           </div>
           <img
@@ -226,7 +235,7 @@
           </div>
         </div>
 
-        <!--  -->
+        <!-- Footer Low -->
 
         <div class="footer__line"></div>
         <div class="footer-links">
